--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   text-align: center;
   padding: 2% 5%;
 }
+.alerts-container {
+  position: fixed;
+  top: 0px;
+  left: 20px;
+  width: 250px;
+  z-index: 1000;
+}
 
 .App * {
   box-sizing: border-box;
