--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,16 @@ input[type="number"] {
   outline: none;
   cursor: pointer;
 }
+
+/* charts */
+
+.charts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (max-width: 768px){
+  .charts-container {
+  grid-template-columns: 1fr;
+  }
+}
